# jungbi

./: .claudeignore  .gitignore  CLAUDE.md
.claude/: settings.local.json
.claude/agent-memory/frontend-developer/: MEMORY.md
.claude/agents/: ai-engineer.md  backend-developer.md  code-reviewer.md  cpo.md  devops.md  frontend-developer.md  growth-hacker.md  legal-compliance-checker.md  mobile-builder.md  performance-benchmarker.md  trend-researcher.md  ui-designer.md  ux-researcher.md
.claude/commands/: build.md  cost.md  idea.md  plan.md  retro.md  review.md  ship.md
.claude/memory/: README.md  decisions.md  patterns.md  progress.md  ux-research-waruru.md
projects/jungbi/: README.md  docker-compose.yml
projects/jungbi/.github/workflows/: deploy.yml
projects/jungbi/docs/: plan.md  review.md  ui-design-spec.md  vision.md
projects/jungbi/src/web/: .dockerignore  .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
projects/jungbi/supabase/: 001_initial_schema.sql  003_ltv_tax_qna.sql
projects/muti-landing/docs/: vision.md
projects/waruru/: README.md  docker-compose.yml
projects/waruru/.github/workflows/: deploy.yml
projects/waruru/docs/: architecture.md  market-research.md  plan.md  review.md  ui-spec.md  ux-flow.md  vision.md
projects/waruru/src/ai-sidecar/: .env.example  Dockerfile  main.py  pyproject.toml
projects/waruru/src/ai-sidecar/figurine/: __init__.py  generator.py
projects/waruru/src/ai-sidecar/matching/: big_five.py
projects/waruru/src/ai-sidecar/tests/: test_big_five.py
(+145 files in other folders)
